# GTS_Plugin

./: CMakeLists.txt  _CompileDLL.bat  _CreateModPackage.bat  vcpkg.json
cmake/: AddCXXFiles.cmake  Package.cmake  xSEPlugin.cmake
cmake/ports/CommonlibSSE-NG-GTS/: vcpkg.json
distribution/PapyrusSource/: GTSProxy.psc
src/: Constants.hpp  PCH.hpp  xSEPlugin.cpp
src/API/: GTSPluginInterface.cpp  Racemenu.cpp  SmoothCam.cpp
src/Config/: Config.cpp  Config.hpp  ConfigModHandler.cpp  ConfigModHandler.hpp
src/Config/Settings/: SettingsAI.hpp  SettingsAdvanced.hpp  SettingsAudio.hpp  SettingsAutoAim.hpp  SettingsBalance.hpp  SettingsCamera.hpp  SettingsGeneral.hpp  SettingsKeybinds.hpp  SettingsUI.hpp
src/Config/Util/: FileUtils.cpp  SettingsOperations.hpp  WindowSettingsHolder.hpp  WindowSettingsRegistry.hpp
src/Data/: Persistent.cpp  Persistent.hpp  Runtime.cpp  Runtime.hpp  Transient.cpp  Transient.hpp
src/Data/Runtime/: LPerks.hpp  LQuests.hpp  LSoundDescriptors.hpp
src/Data/Storage/: PersistentData.hpp  TransientData.hpp
src/Data/Util/: BasicRecord.hpp  CompressedRecord.hpp  MapRecord.hpp  RuntimeEntry.hpp  TLVSerializer.hpp
src/Debug/: DebugDraw.cpp  DebugDraw.hpp
src/Hooks/: Hooks.cpp
src/Hooks/Actor/: Actor.cpp  ActorEquipManager.cpp  ActorValueOwner.cpp  Controls.cpp  Damage.cpp  Detection.cpp  Jump.cpp
src/Hooks/Animation/: HeadtrackingGraph.cpp  PreventAnimations.cpp
src/Hooks/Experiments/: Experiments_FootColliders.cpp  Experiments_FootColliders.hpp
src/Hooks/Havok/: Havok.cpp  Pushback.cpp  hkbBehaviorGraph.cpp
src/Hooks/Projectile/: Projectiles.cpp
src/Hooks/Sound/: BGSImpactManager.cpp
src/Magic/: Magic.cpp  Magic.hpp
src/Magic/Effects/: Common.cpp  Common.hpp
src/Magic/Effects/Poisons/: PoisonOfShrinking.cpp
src/Magic/Effects/Potions/: ShrinkPotion.cpp
src/Magic/Effects/Shouts/: TinyCalamity.cpp
src/Magic/Effects/Spells/: Absorb.cpp  GrowthSpurt.hpp  RestoreSize.cpp  RestoreSizeOther.cpp  SlowGrow.cpp  SlowGrow.hpp
src/Managers/: AttackManager.cpp  AttackManager.hpp  AttributeManager.cpp  AttributeManager.hpp  CameraManager.cpp  CameraManager.hpp  CrushManager.cpp  ExplosionManager.cpp  FurnitureManager.cpp  FurnitureManager.hpp  GTSManager.cpp  GTSSizeManager.cpp  HighHeel.cpp  HighHeel.hpp  Impact.cpp  MaxSizeManager.cpp  MaxSizeManager.hpp  RandomGrowth.cpp  RipClothManager.cpp  Rumble.cpp  Rumble.hpp  ShrinkToNothingManager.cpp  Tremor.cpp
src/Managers/AI/: AIFunctions.cpp  AIFunctions.hpp  AIManager.cpp  AIManager.hpp  Headtracking.cpp  Headtracking.hpp
src/Managers/AI/ButtCrush/: ButtCrushAI.cpp
src/Managers/AI/Grab/: GrabAI.cpp
src/Managers/AI/Hug/: HugAI.cpp
src/Managers/AI/StompKick/: StompKickSwipeAI.cpp  StompKickSwipeAI.hpp
src/Managers/AI/Thigh/: ThighCrushAI.cpp  ThighSandwichAI.cpp
src/Managers/AI/Vore/: DevourmentAI.cpp  VoreAI.cpp
src/Managers/Animation/: AnimationManager.cpp  AnimationManager.hpp  BoobCrush.cpp  BoobCrush.hpp  ButtCrush.cpp  CleavageEvents.cpp  CleavageState.cpp  CleavageStrangle.cpp  Crawling.cpp  Custom_Events_ModSupport.cpp  FootGrind.cpp  FootTrample.cpp  Grab.cpp  Grab.hpp  GrabUtils.cpp  Grab_Attack.cpp  Grab_Play.cpp  Grab_Play_Events.cpp  Grab_Sneak_Vore.cpp  Grab_Throw.cpp  Grab_Vore.cpp  Growth.cpp  HugHeal.cpp  HugShrink.cpp  HugShrink.hpp  Kicks.cpp  Proning.cpp  RandomGrowth.cpp  Shrink.cpp  Sneak_KneeCrush.cpp  Sneak_Slam.cpp  Sneak_Slam_FingerGrind.cpp  Sneak_Slam_Strong.cpp  Sneak_Swipes.cpp  StompAssist.cpp  StompAssist.hpp  Stomp_Normal.cpp  Stomp_Strong.cpp  Stomp_Under.cpp  Stomp_Under.hpp  (+12 more)
src/Managers/Animation/Utils/: AttachPoint.hpp  (+5 more)
src/Managers/Audio/: AudioObtainer.cpp  Footstep.cpp  GoreAudio.cpp  MoansLaughs.cpp  Stomps.cpp
src/Managers/Cameras/: CamUtil.cpp  TPState.cpp
src/Managers/Collision/: DynamicCollisionController.cpp  DynamicCollisionController.hpp  DynamicCollisionManager.cpp  DynamicCollisionUtils.cpp
src/Managers/Console/: ConsoleManager.cpp  ConsoleManager.hpp
src/Managers/Contact/: ColliderUtils.cpp  ColliderUtils.hpp  ContactListener.cpp  ContactManager.cpp
src/Managers/Damage/: CollisionDamage.cpp  CollisionDamage.hpp  LaunchActor.cpp  LaunchObject.cpp  TinyCalamity.cpp  TinyCalamity.hpp
src/Managers/GameMode/: GameModeManager.cpp
src/Managers/Input/: InputManager.cpp
src/Managers/Morphs/: MorphManager.hpp
src/Managers/Perks/: PerkHandler.cpp  PerkHandler.hpp  ShrinkingGaze.cpp  ShrinkingGaze.hpp
src/Papyrus/: Papyrus.cpp  ProxyFunctions.cpp  ProxyFunctions.hpp  TotalControl.cpp
src/Scale/: DynamicScale.cpp  Height.cpp  ModScale.cpp  ModScale.hpp  Scale.cpp  Scale.hpp  ScaleUtils.cpp
src/Systems/Colliders/: ColliderData.cpp
src/Systems/Events/: EventData.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventListener.cpp  EventListener.hpp  EventRegistry.cpp  GameEvents.cpp
src/Systems/Misc/: Tasks.cpp  Tasks.hpp
src/Systems/Motion/: Smooth.cpp  Smooth.hpp  Spring.cpp  Spring.hpp
src/Systems/Rays/: Raycast.cpp  Raycast.hpp
src/UI/: GTSMenu.cpp  GTSMenu.hpp
src/UI/Controls/: ActorInfoCard.cpp  CollapsingTabHeader.cpp  ComboBox.hpp  QuestTracker.cpp  Slider.cpp  StatusBar.cpp  StatusBar.hpp
src/UI/Core/: ImCategoryContainer.hpp  ImContextManager.cpp  ImFontManager.cpp  ImFontManager.hpp  ImGraphics.cpp  ImGraphics.hpp  ImInput.cpp  ImWindow.cpp  ImWindow.hpp  ImWindowManager.cpp  ImWindowManager.hpp
src/Utils/: Camera.cpp  DifficultyUtils.cpp  Looting.cpp  Node.cpp  Node.hpp  PapyrusUtils.hpp  Units.cpp
src/Utils/Actions/: ActionUtils.cpp  ActionUtils.hpp  InputConditions.hpp  InputFunctions.cpp  InputFunctions.hpp  TotalControlActions.cpp  TotalControlActions.hpp  VoreUtils.cpp
src/Utils/Actor/: AV.cpp  ActorBools.cpp  ActorBools.hpp  ActorUtils.cpp  ActorUtils.hpp  AutoAimUtils.cpp  AutoAimUtils.hpp  AutoAimUtils_Calculation.cpp  AutoAimUtils_Calculation.hpp  FindActor.cpp  FindActor.hpp  GTSUtils.cpp  GTSUtils.hpp
src/Utils/Animation/: AnimationVars.cpp  AnimationVars.hpp
src/Utils/Misc/: Random.hpp
src/Utils/Plugin/: InitUtils.cpp  Logger.cpp
src/Utils/Text/: Text.cpp  Text.hpp
(+70 files in other folders)
